--- a/MFCTS-Project/requirements.txt
+++ b/MFCTS-Project/requirements.txt
@@ -2,3 +2,7 @@ scikit-learn~=1.6.1
 spacy~=3.8.5
 sentence-transformers~=4.1.0
 stanza~=1.10.1
+tensorflow==2.19.0
+pandas==2.2.3
+keras==3.9.2
+datasets==3.5.0
