Added generator for code pairs for model lerning

--- a/.gitignore
+++ b/.gitignore
@@ -170,3 +170,4 @@ NaturalLanguageSimilarity/cc.uk.300.vec.gz
 LanguageSimilarity/cc.uk.300.vec.gz
 /LanguageSimilarity/Models
 /LanguageSimilarity/uk_vectors
+/CodePairGenerator/.idea
